--- a/React/creat-react-app/documentation/doc.html
+++ b/React/creat-react-app/documentation/doc.html
@@ -24,8 +24,10 @@
     </h2>
     <blockquote>em construção  </blockquote>
     <h2>Creating a TypeScript app
-      <p>Templates customizados perimitem que você selecione um template na criação do seu projeto mantendo todas as funcionalidades do Create React App</p>
-      <p></p>
+      <p>Você pode criar um novo projeto TypeScript usando template. Para usar nosso TypeScript template acrescente --template typescript no comando de criação.</p>
+      <p><code>npx crate-react-app my-app --template typescript</code></p>
     </h2>
+    <blockquote>Quando você cria um app usando CLI o pacote create-react-app vai usar Yarn para instalar as dependencias por padrão se o Yarn estiver instalado mas se ainda assim houver a preferencia ou necessidade de usar o npm só acrescenter ao comando a flag:</blockquote>
+    <p><code>npx create-react-app my-app --template typescript</code></p>
   </body>
 </html>
